added a button to start a timer that is every second and displays it, I couldn't figure out how to stop it, I know clearInterval but something would of had to be global

--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
   </head>
   <body>
     <h1 class="heading hidden">This is my amazing title</h1>
+
+    <button class="start">Start Timer</button>
+    <p class="timer">0</p>
   </body>
 </html>
