managed to get stop timer button to work

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <h1 class="heading hidden">This is my amazing title</h1>
 
     <button class="start">Start Timer</button>
+    <button class="stop">Stop Timer</button>
     <p class="timer">0</p>
   </body>
 </html>
